[gd_scene load_steps=17 format=3 uid="uid://d0000av81uipe"]

[ext_resource type="Script" path="res://scenes/bossfight/scenes/enemy.gd" id="1_6f7jh"]
[ext_resource type="PackedScene" uid="uid://6212sap2vvmx" path="res://scenes/bossfight/scenes/enemy_projectile.tscn" id="2_hltrb"]
[ext_resource type="Script" path="res://scenes/bossfight/scenes/PatternManager.gd" id="3_3mcop"]
[ext_resource type="Shader" path="res://scenes/bossfight/scenes/enemy.gdshader" id="3_je6fq"]
[ext_resource type="AudioStream" uid="uid://cv5m88r1tkxg" path="res://scenes/bossfight/assets/Explosion7.mp3" id="3_rrbhx"]
[ext_resource type="Script" path="res://scenes/bossfight/scenes/Single.gd" id="4_e0dqg"]
[ext_resource type="Texture2D" uid="uid://dxgve74pwj3x5" path="res://scenes/bossfight/assets/monster4.png" id="4_x7kpk"]
[ext_resource type="Script" path="res://scenes/bossfight/scenes/Row.gd" id="5_6uaqo"]
[ext_resource type="Script" path="res://scenes/bossfight/scenes/Fan.gd" id="6_h3ng5"]
[ext_resource type="Script" path="res://scenes/bossfight/scenes/Circular.gd" id="7_5r3vm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j1xr1"]
size = Vector2(63.5, 108.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ldjy2"]
shader = ExtResource("3_je6fq")
shader_parameter/whitening = 0.0

[sub_resource type="Animation" id="Animation_goq6r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Polygon:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.439216, 0.0392157, 0.129412, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BossfightEnemy:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BossfightEnemy:material:shader_parameter/whitening")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_l1wp7"]
resource_name = "death"
length = 4.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Polygon:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.439216, 0.0392157, 0.129412, 1), Color(0.439216, 0.0392157, 0.129412, 1), Color(1, 1, 1, 1), Color(0.439216, 0.0392157, 0.129412, 1), Color(1, 1, 1, 1), Color(0.439216, 0.0392157, 0.129412, 1), Color(1, 1, 1, 1), Color(0.439216, 0.0392157, 0.129412, 1), Color(1, 1, 1, 1), Color(0.439216, 0.0392157, 0.129412, 1), Color(1, 1, 1, 1), Color(0.439216, 0.0392157, 0.129412, 1), Color(1, 1, 1, 1), Color(0.439216, 0.0392157, 0.129412, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.2, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Polygon:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimationAudio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_rrbhx")
}],
"times": PackedFloat32Array(2.2)
}
tracks/3/use_blend = true
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BossfightEnemy:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_50no7"]
resource_name = "enemy_hit"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Polygon:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.439216, 0.0392157, 0.129412, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Polygon:offset")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(5, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BossfightEnemy:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(5, 0), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BossfightEnemy:material:shader_parameter/whitening")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_towbs"]
_data = {
"RESET": SubResource("Animation_goq6r"),
"enemy_death": SubResource("Animation_l1wp7"),
"enemy_hit": SubResource("Animation_50no7")
}

[node name="Enemy" type="Area2D" node_paths=PackedStringArray("polygon", "collision") groups=["enemy"]]
script = ExtResource("1_6f7jh")
projectile_scene = ExtResource("2_hltrb")
polygon = NodePath("Polygon")
start_health = 50.0
collision = NodePath("CollisionShape")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(-10.5, -5.5)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_j1xr1")

[node name="Polygon" type="Polygon2D" parent="."]
visible = false
position = Vector2(-7.39506, 0)
scale = Vector2(1.20988, 2)
color = Color(0.439216, 0.0392157, 0.129412, 1)
polygon = PackedVector2Array(34, 49, 40, -49, -41, -48, -32, 51)

[node name="BossfightEnemy" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_ldjy2")
position = Vector2(-53, -10)
scale = Vector2(0.289686, 0.289686)
texture = ExtResource("4_x7kpk")

[node name="FireTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(-42, -31)

[node name="EnemyAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_towbs")
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(-7, -24)
emitting = false
amount = 40
lifetime = 4.0
speed_scale = 4.91
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 50.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 50.0
scale_amount_min = 10.0
scale_amount_max = 30.0
color = Color(1, 0.384314, 0.141176, 1)

[node name="PatternManager" type="Node" parent="." node_paths=PackedStringArray("attack_type_array")]
script = ExtResource("3_3mcop")
attack_type_array = [NodePath("Patterns/Single"), NodePath("Patterns/Row")]

[node name="Patterns" type="Node" parent="PatternManager"]

[node name="Circular" type="Node" parent="PatternManager/Patterns"]
script = ExtResource("7_5r3vm")

[node name="Single" type="Node" parent="PatternManager/Patterns"]
script = ExtResource("4_e0dqg")

[node name="Row" type="Node" parent="PatternManager/Patterns"]
script = ExtResource("5_6uaqo")

[node name="Fan" type="Node" parent="PatternManager/Patterns"]
script = ExtResource("6_h3ng5")

[node name="AttackSwitchTimer" type="Timer" parent="PatternManager"]
wait_time = 5.0
autostart = true

[node name="Projectiles" type="Node" parent="."]

[node name="AnimationAudio" type="AudioStreamPlayer2D" parent="."]
volume_db = 10.0
bus = &"Effects"

[connection signal="character_killed" from="." to="." method="_on_character_killed"]
[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
[connection signal="pattern_switched" from="PatternManager" to="." method="_on_pattern_manager_pattern_switched"]
[connection signal="shoot" from="PatternManager" to="." method="_on_pattern_manager_shoot"]
[connection signal="timeout" from="PatternManager/AttackSwitchTimer" to="PatternManager" method="_on_attack_switch_timer_timeout"]
